feat: finish contact html

--- a/index.html
+++ b/index.html
@@ -5,9 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>Document</title>
+    <script src="https://kit.fontawesome.com/e34e4f3bdb.js" crossorigin="anonymous"></script>
+    <title>Html, Css Portfolio</title>
 </head>
 <body>
-    
+    <header class="header">
+        <picture class="image__me">
+            <image class="me" src="./assets/img/me.png"  alt="Abdulloev Muhammadjon" />
+        </picture>
+        <article class="contact">
+            <i class="fa-solid fa-phone"></i><a href="tel:+79259150471" class="tel">+7 925 915 04 71</a>
+            <i class="fa-solid fa-envelope"></i><a href="mailto:abum202@mail.ru" class="email">abum202@mail.ru</a>
+            <i class="fa-brands fa-github"></i><a href="tel:+79259150471" class="github-profile">MMII0220</a>
+            <i class="fa-solid fa-location-crosshairs"></i><a href="https://goo.gl/maps/sWPo9xw2YpVZUN1WA" class="location">Russia, Moscow city, 11 Parkovaya, house 36</a>
+        </article>
+        <article class="skills">
+            
+        </article>
+    </header>
 </body>
 </html>
+
+<!-- <i class="fa-solid fa-phone"></i> phone -->
+<!-- <i class="fa-solid fa-envelope"></i> email -->
+<!-- <i class="fa-brands fa-github"></i> github -->
+<!-- <i class="fa-solid fa-location-crosshairs"></i> location -->
+<!-- <i class="fa-solid fa-user"></i> profile -->
+<!-- <i class="fa-solid fa-computer"></i> briefcase -->
+<!-- <i class="fa-solid fa-user-graduate"></i> education -->
+
+
