refactor: make web-page more readable

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <div class="wrapper">
+        <!-- Header-->
         <header class="header">
             <picture class="image__me">
                 <image class="me" src="./assets/img/me.png"  alt="Abdulloev Muhammadjon" />
@@ -67,6 +68,8 @@
                 </article>
             </div>
         </header>
+
+        <!-- Portfolio -->
         <section class="portfolio">
             <h1 class="sup__title">Abdulloev<br>Muhammadjon</h1>
             <h2 class="job">Junior Front-end developer</h2>
@@ -83,8 +86,8 @@
                 </p>
             </div>
             <div class="developer__skills">
-                <picture class="developer__skills-text">
-                    <img class="" src="./assets/img/hard skills.svg" alt="typing text">
+                <picture class="portfolio-sub__title">
+                    <img class="type__text" src="./assets/img/hard skills.svg" alt="typing text">
                 </picture>
                 <div class="developer__skills-list">
                     <img src="./assets/img/skills/html_original_wordmark_logo_icon_146478.svg" title="HTML5" alt="HTML5" width="50" height="50"/>
