--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </picture>
             <div class="header__inner">
                 <article class="contact">
-                    <h3 class="sub__title">Contact me</h3>
+                    <h3 class="sub__title">CONTACT</h3>
                     <div class="contact__inner">
                         <a href="tel:+79259150471" class="link"><i class="fa-solid fa-phone"></i> +7 925 915 04 71</a>
                         <a href="mailto:abum202@mail.ru" class="link"><i class="fa-solid fa-envelope"></i> abum202@mail.ru</a>
@@ -29,7 +29,7 @@
                     </div>
                 </article>
                 <article class="skills">
-                    <h3 class="sub__title">Soft skills</h3>
+                    <h3 class="sub__title">SOFT</h3>
                     <div class="skills__inner">
                         <div class="soft__skill">
                             <label for="" class="soft__skill-text">Diligence</label>
@@ -50,7 +50,7 @@
                     </div>
                 </article>
                 <article class="languages">
-                    <h3 class="sub__title">Languages <i class="fa-solid fa-language"></i></h3>
+                    <h3 class="sub__title">LANGUAGES <i class="fa-solid fa-language"></i></h3>
                     <div class="languages__inner">
                         <div class="language">
                             <label for="" class="language-text">English</label>
@@ -74,20 +74,20 @@
             <h1 class="sup__title">Abdulloev<br>Muhammadjon</h1>
             <h2 class="job">Junior Front-end developer</h2>
             <div class="profile">
-                <h3 class="portfolio-sub__title"><i class="fa-solid fa-user"></i> PROFILE</h3>
+                <h3 class="portfolio-sub__title"><i class="fa-solid fa-user"></i> PROFILE <hr></h3>
                 <p class="text">
                     I am 20 years old. I am from Tajikistan, Dushanbe. I am studing Front-end almost for 2 years. I am confident in my skills. I have good interpersonal skills and good team worker. Also, I have very willing to learn and develop new skills.
                 </p>
             </div>
             <div class="education">
-                <h3 class="portfolio-sub__title"><i class="fa-solid fa-user-graduate"></i> EDUCATION</h3>
+                <h3 class="portfolio-sub__title"><i class="fa-solid fa-user-graduate"></i> EDUCATION<hr></h3>
                 <p class="education_text">
                     I am 20 years old. I am from Tajikistan, Dushanbe. I am studing Front-end almost for 2 years. I am confident in my skills. I have good interpersonal skills and good team worker. Also, I have very willing to learn and develop new skills.
                 </p>
             </div>
             <div class="developer__skills">
                 <picture class="portfolio-sub__title">
-                    <img class="type__text" src="./assets/img/hard skills.svg" alt="typing text">
+                    <img class="type__text" src="./assets/img/hard skills.svg" alt="typing text"> 
                 </picture>
                 <div class="developer__skills-list">
                     <img src="./assets/img/skills/html_original_wordmark_logo_icon_146478.svg" title="HTML5" alt="HTML5" width="50" height="50"/>
