--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
         <!-- Header-->
         <header class="header">
             <picture class="image__me">
-                <image class="me" src="./assets/img/me.png"  alt="Abdulloev Muhammadjon" />
+                <image class="me" src="./assets/img/me.png"  alt="Abdulloev Muhammadjon"  >
             </picture>
             <div class="header__inner">
                 <article class="contact">
                     <h3 class="sub__title">CONTACT</h3>
                     <div class="contact__inner">
-                        <a href="tel:+79259150471" class="link"><i class="fa-solid fa-phone"></i> +7 925 915 04 71</a>
-                        <a href="mailto:abum202@mail.ru" class="link"><i class="fa-solid fa-envelope"></i> abum202@mail.ru</a>
-                        <a href="tel:+79259150471" class="link"><i class="fa-brands fa-github"></i> MMII0220</a>
-                        <a href="https://goo.gl/maps/sWPo9xw2YpVZUN1WA" class="link"><i class="fa-solid fa-location-crosshairs"></i> Russia, Moscow city, 11 Parkovaya, house 36</a>
+                        <a href="tel:+79259150471" class="link"><i class="fa-solid fa-phone"></i>+7-925-915-04-71</a>
+                        <a href="mailto:abum202@mail.ru" class="link"><i class="fa-solid fa-envelope"></i>abum202@mail.ru</a>
+                        <a href="tel:+79259150471" class="link"><i class="fa-brands fa-github"></i>MMII0220</a>
+                        <a href="https://goo.gl/maps/sWPo9xw2YpVZUN1WA" class="link"><i class="fa-solid fa-location-crosshairs"></i>Russia, Moscow city, 11 Parkovaya, house 36</a>
                     </div>
                 </article>
                 <article class="skills">
@@ -90,21 +90,21 @@
                     <img class="type__text" src="./assets/img/hard skills.svg" alt="typing text"> 
                 </picture>
                 <div class="developer__skills-list">
-                    <img src="./assets/img/skills/html_original_wordmark_logo_icon_146478.svg" title="HTML5" alt="HTML5" width="50" height="50"/>
-                    <img src="./assets/img/skills/css_original_wordmark_logo_icon_146576.svg" title="CSS3" alt="CSS3" width="50" height="50"/>
-                    <img src="./assets/img/skills/javascript_original_logo_icon_146455.svg" title="Javascript" alt="Javascript" width="50" height="50"/>
-                    <img src="./assets/img/skills/react_original_wordmark_logo_icon_146375.svg" title="React" alt="React" width="50" height="50"/>
-                    <img src="./assets/img/skills/1280px-Babel_Logo.svg.png" title="React" alt="Babel" width="50" height="50"/>
-                    <img src="./assets/img/skills/webpack_plain_logo_icon_146297.png" title="React" alt="React" width="50" height="50"/>
-                    <img src="./assets/img/skills/typescript_original_logo_icon_146317.svg" title="Typescript" alt="Typescript" width="50" height="50"/>
-                    <img src="./assets/img/skills/c_original_logo_icon_146611.svg" title="C" alt="C" width="50" height="50"/>
-                    <img src="./assets/img/skills/bootstrap_plain_logo_icon_146619.svg" title="Bootstrap" alt="Bootstrap" width="50" height="50"/>
-                    <img src="./assets/img/skills/Photoshop_CC_icon.png" title="Bootstrap" alt="Bootstrap" width="50" height="50"/>
-                    <img src="./assets/img/skills/sass_original_logo_icon_146350.svg" title="SASS" alt="SASS" width="50" height="50"/>
-                    <img src="./assets/img/skills/file_type_scss_icon_130177.svg" title="SCSS" alt="SCSS" width="50" height="50"/>
-                    <img src="./assets/img/skills/file_type_git_icon_130581.svg" title="Git" alt="Git" width="50" height="50"/>
-                    <img src="./assets/img/skills/github_git_hub_logo_icon_132878.svg" title="GitHub" alt="GitHub" width="50" height="50"/>
-                    <img src="./assets/img/skills/gitlab_original_logo_icon_146503.svg" title="GitLab" alt="GitLab" width="50" height="50"/>
+                    <img src="./assets/img/skills/html_original_wordmark_logo_icon_146478.svg" title="HTML5" alt="HTML5" width="50" height="50" >
+                    <img src="./assets/img/skills/css_original_wordmark_logo_icon_146576.svg" title="CSS3" alt="CSS3" width="50" height="50" >
+                    <img src="./assets/img/skills/javascript_original_logo_icon_146455.svg" title="Javascript" alt="Javascript" width="50" height="50" >
+                    <img src="./assets/img/skills/react_original_wordmark_logo_icon_146375.svg" title="React" alt="React" width="50" height="50" >
+                    <img src="./assets/img/skills/1280px-Babel_Logo.svg.png" title="React" alt="Babel" width="50" height="50" >
+                    <img src="./assets/img/skills/webpack_plain_logo_icon_146297.png" title="React" alt="React" width="50" height="50" >
+                    <img src="./assets/img/skills/typescript_original_logo_icon_146317.svg" title="Typescript" alt="Typescript" width="50" height="50" >
+                    <img src="./assets/img/skills/c_original_logo_icon_146611.svg" title="C" alt="C" width="50" height="50" >
+                    <img src="./assets/img/skills/bootstrap_plain_logo_icon_146619.svg" title="Bootstrap" alt="Bootstrap" width="50" height="50" >
+                    <img src="./assets/img/skills/Photoshop_CC_icon.png" title="Bootstrap" alt="Bootstrap" width="50" height="50" >
+                    <img src="./assets/img/skills/sass_original_logo_icon_146350.svg" title="SASS" alt="SASS" width="50" height="50" >
+                    <img src="./assets/img/skills/file_type_scss_icon_130177.svg" title="SCSS" alt="SCSS" width="50" height="50" >
+                    <img src="./assets/img/skills/file_type_git_icon_130581.svg" title="Git" alt="Git" width="50" height="50" >
+                    <img src="./assets/img/skills/github_git_hub_logo_icon_132878.svg" title="GitHub" alt="GitHub" width="50" height="50" >
+                    <img src="./assets/img/skills/gitlab_original_logo_icon_146503.svg" title="GitLab" alt="GitLab" width="50" height="50" >
                 </div>
             </div>
         </section>
