refactor: make css more better

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!-- Header-->
         <header class="header">
             <picture class="image__me">
-                <image class="me" src="./assets/img/me.png"  alt="Abdulloev Muhammadjon"  >
+                <img class="me" src="./assets/img/me.png"  alt="Abdulloev Muhammadjon">
             </picture>
             <div class="header__inner">
                 <article class="contact">
@@ -90,33 +90,24 @@
                     <img class="type__text" src="./assets/img/hard skills.svg" alt="typing text"> 
                 </picture>
                 <div class="developer__skills-list">
-                    <img src="./assets/img/skills/html_original_wordmark_logo_icon_146478.svg" title="HTML5" alt="HTML5" width="50" height="50" >
-                    <img src="./assets/img/skills/css_original_wordmark_logo_icon_146576.svg" title="CSS3" alt="CSS3" width="50" height="50" >
-                    <img src="./assets/img/skills/javascript_original_logo_icon_146455.svg" title="Javascript" alt="Javascript" width="50" height="50" >
-                    <img src="./assets/img/skills/react_original_wordmark_logo_icon_146375.svg" title="React" alt="React" width="50" height="50" >
-                    <img src="./assets/img/skills/1280px-Babel_Logo.svg.png" title="React" alt="Babel" width="50" height="50" >
-                    <img src="./assets/img/skills/webpack_plain_logo_icon_146297.png" title="React" alt="React" width="50" height="50" >
-                    <img src="./assets/img/skills/typescript_original_logo_icon_146317.svg" title="Typescript" alt="Typescript" width="50" height="50" >
-                    <img src="./assets/img/skills/c_original_logo_icon_146611.svg" title="C" alt="C" width="50" height="50" >
-                    <img src="./assets/img/skills/bootstrap_plain_logo_icon_146619.svg" title="Bootstrap" alt="Bootstrap" width="50" height="50" >
-                    <img src="./assets/img/skills/Photoshop_CC_icon.png" title="Bootstrap" alt="Bootstrap" width="50" height="50" >
-                    <img src="./assets/img/skills/sass_original_logo_icon_146350.svg" title="SASS" alt="SASS" width="50" height="50" >
-                    <img src="./assets/img/skills/file_type_scss_icon_130177.svg" title="SCSS" alt="SCSS" width="50" height="50" >
-                    <img src="./assets/img/skills/file_type_git_icon_130581.svg" title="Git" alt="Git" width="50" height="50" >
-                    <img src="./assets/img/skills/github_git_hub_logo_icon_132878.svg" title="GitHub" alt="GitHub" width="50" height="50" >
-                    <img src="./assets/img/skills/gitlab_original_logo_icon_146503.svg" title="GitLab" alt="GitLab" width="50" height="50" >
+                    <img src="./assets/img/skills/html_original_wordmark_logo_icon_146478.svg" title="HTML5" alt="HTML5" width="50" height="50">
+                    <img src="./assets/img/skills/css_original_wordmark_logo_icon_146576.svg" title="CSS3" alt="CSS3" width="50" height="50">
+                    <img src="./assets/img/skills/javascript_original_logo_icon_146455.svg" title="Javascript" alt="Javascript" width="50" height="50">
+                    <img src="./assets/img/skills/react_original_wordmark_logo_icon_146375.svg" title="React" alt="React" width="50" height="50">
+                    <img src="./assets/img/skills/1280px-Babel_Logo.svg.png" title="React" alt="Babel" width="50" height="50">
+                    <img src="./assets/img/skills/webpack_plain_logo_icon_146297.png" title="React" alt="React" width="50" height="50">
+                    <img src="./assets/img/skills/typescript_original_logo_icon_146317.svg" title="Typescript" alt="Typescript" width="50" height="50">
+                    <img src="./assets/img/skills/c_original_logo_icon_146611.svg" title="C" alt="C" width="50" height="50">
+                    <img src="./assets/img/skills/bootstrap_plain_logo_icon_146619.svg" title="Bootstrap" alt="Bootstrap" width="50" height="50">
+                    <img src="./assets/img/skills/Photoshop_CC_icon.png" title="Bootstrap" alt="Bootstrap" width="50" height="50">
+                    <img src="./assets/img/skills/sass_original_logo_icon_146350.svg" title="SASS" alt="SASS" width="50" height="50">
+                    <img src="./assets/img/skills/file_type_scss_icon_130177.svg" title="SCSS" alt="SCSS" width="50" height="50">
+                    <img src="./assets/img/skills/file_type_git_icon_130581.svg" title="Git" alt="Git" width="50" height="50">
+                    <img src="./assets/img/skills/github_git_hub_logo_icon_132878.svg" title="GitHub" alt="GitHub" width="50" height="50">
+                    <img src="./assets/img/skills/gitlab_original_logo_icon_146503.svg" title="GitLab" alt="GitLab" width="50" height="50">
                 </div>
             </div>
         </section>
     </div>
 </body>
 </html>
-
-<!-- <i class="fa-solid fa-phone"></i> phone -->
-<!-- <i class="fa-solid fa-envelope"></i> email -->
-<!-- <i class="fa-brands fa-github"></i> github -->
-<!-- <i class="fa-solid fa-location-crosshairs"></i> location -->
-<!-- <i class="fa-solid fa-language"></i> language -->
-<!-- <i class="fa-solid fa-user"></i> profile -->
-<!-- <i class="fa-solid fa-computer"></i> briefcase -->
-<!-- <i class="fa-solid fa-user-graduate"></i> education -->
