--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <article class="contact">
                     <h3 class="sub__title">CONTACT</h3>
                     <div class="contact__inner">
-                        <a href="tel:+79259150471" class="link"><i class="fa-solid fa-phone"></i>+7-925-915-04-71</a>
+                        <a href="tel:+79259150471" class="link"><i class="fa-solid fa-phone"></i>+7&nbsp;925&nbsp;915&nbsp;04&nbsp;71</a>
                         <a href="mailto:abum202@mail.ru" class="link"><i class="fa-solid fa-envelope"></i>abum202@mail.ru</a>
                         <a href="tel:+79259150471" class="link"><i class="fa-brands fa-github"></i>MMII0220</a>
                         <a href="https://goo.gl/maps/sWPo9xw2YpVZUN1WA" class="link"><i class="fa-solid fa-location-crosshairs"></i>Russia, Moscow city, 11 Parkovaya, house 36</a>
@@ -74,13 +74,13 @@
             <h1 class="sup__title">Abdulloev<br>Muhammadjon</h1>
             <h2 class="job">Junior Front-end developer</h2>
             <div class="profile">
-                <h3 class="portfolio-sub__title"><i class="fa-solid fa-user"></i> PROFILE <hr></h3>
+                <h3 class="portfolio-sub__title"><i class="fa-solid fa-user"></i> PROFILE</h3>
                 <p class="text">
                     I am 20 years old. I am from Tajikistan, Dushanbe. I am studing Front-end almost for 2 years. I am confident in my skills. I have good interpersonal skills and good team worker. Also, I have very willing to learn and develop new skills.
                 </p>
             </div>
             <div class="education">
-                <h3 class="portfolio-sub__title"><i class="fa-solid fa-user-graduate"></i> EDUCATION<hr></h3>
+                <h3 class="portfolio-sub__title"><i class="fa-solid fa-user-graduate"></i> EDUCATION</h3>
                 <p class="education_text">
                     I am 20 years old. I am from Tajikistan, Dushanbe. I am studing Front-end almost for 2 years. I am confident in my skills. I have good interpersonal skills and good team worker. Also, I have very willing to learn and develop new skills.
                 </p>
